[tool.poetry]
name = "cumulus-message-adapter-passthrough"
version = "0.1.0"
description = ""
authors = ["PODAAC IngestAndArchive <podaac@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.6"
cumulus-process = "0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
