[tool.poetry]
name = "cumulus-message-adapter-passthrough"
version = "1.1.0-alpha.0"
description = "A simple lambda which pass input through output"
authors = ["PODAAC IngestAndArchive <podaac@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
cumulus-process = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
